[lib]
crate-type = ["cdylib"]

[package]
name = "c-ordering-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordering-server = { version = "0.1.0", path = "../ordering-server" }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros"] }
simple_logger = "4.3.0"
