[package]
name = "ordering-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
log = "0.4.20"
rmp-serde = "1.1.2"
serde = { version = "1.0.193", features = ["derive"] }
simple_logger = "4.3.0"
tokio = { version = "1.34.0", features = [
  "net",
  "rt",
  "io-util",
  "sync",
  "macros",
  "rt-multi-thread",
  "io-std",
] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec"] }
