[package]
name = "protocol-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
ndarray = "0.15.6"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.1"
rmp-serde = "1.1.2"
serde = { version = "1.0.189", features = [
  "derive",
  "rc",     # "rc" is OK because it is only needed for duplication of references across threads, not duplication internal to the data structure
] }
sha2 = "0.10.8"
wait-timeout = "0.2.0"
