[package]
name = "trace-ord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.4.1"
lf-trace-reader = { version = "0.1.0", path = "../lf-trace-reader" }
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
