[package]
name = "viz264"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"
# plotters = { version = "0.3.5", default_features = false, features = ["evcxr"] }
protocol-test = { version = "0.1.0", path = "../protocol-test" }
rmp-serde = "1.1.2"
